--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -222,15 +222,58 @@
 
     "item.mubble.annoying_dog": "Chien Agaçant",
 
-    "item.mubble.record_blank": "Disque vide",
-    "item.mubble.record.champions_road.desc": "Super Mario 3D World - Champion's Road",
-    "item.mubble.record.fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly",
-    "item.mubble.record.vampire_killer.desc": "Castlevania Judgement - Vampire Killer",
+    "item.mubble.blank_music_disc": "Disque de musique vide",
+    "//item.mubble.music_disc_battlefield": "Music Disc",
+    "//item.mubble.music_disc_champions_road": "Music Disc",
+    "//item.mubble.music_disc_confronting_myself": "Music Disc",
+    "//item.mubble.music_disc_electroplankton_medley": "Music Disc",
+    "//item.mubble.music_disc_fields_of_hopes_and_dreams": "Music Disc",
+    "//item.mubble.music_disc_kass_theme": "Music Disc",
+    "//item.mubble.music_disc_lost_painting": "Music Disc",
+    "//item.mubble.music_disc_mad_mew_mew": "Music Disc",
+    "//item.mubble.music_disc_megalovania": "Music Disc",
+    "//item.mubble.music_disc_popple_battle": "Music Disc",
+    "//item.mubble.music_disc_reflection": "Music Disc",
+    "//item.mubble.music_disc_rude_buster": "Music Disc",
+    "//item.mubble.music_disc_shark_bytes": "Music Disc",
+    "//item.mubble.music_disc_sound_stage": "Music Disc",
+    "//item.mubble.music_disc_studiopolis_act1": "Music Disc",
+    "//item.mubble.music_disc_the_grand_finale": "Music Disc",
+    "//item.mubble.music_disc_type_a": "Music Disc",
+    "//item.mubble.music_disc_vampire_killer": "Music Disc",
+    "//item.mubble.music_disc_vs_champion_red_and_blue": "Music Disc",
+    "item.mubble.music_disc_battlefield.desc": "Super Smash Bros. Ultimate - Battlefield",
+    "item.mubble.music_disc_champions_road.desc": "Super Mario 3D World - Champion's Road",
+    "item.mubble.music_disc_confronting_myself.desc": "Celeste - Confronting Myself",
+    "item.mubble.music_disc_electroplankton_medley.desc": "Electroplankton Medley (SBBU)",
+    "item.mubble.music_disc_fields_of_hopes_and_dreams.desc": "DELTARUNE - Fields of Hopes and Dreams",
+    "item.mubble.music_disc_kass_theme.desc": "The Legend of Zelda: Breath of the Wild - Kass' Theme (SSBU)",
+    "item.mubble.music_disc_lost_painting.desc": "Castlevania: Symphony of the Night - Lost Painting (SSBU)",
+    "item.mubble.music_disc_mad_mew_mew.desc": "UNDERTALE - Mad Mew Mew",
+    "item.mubble.music_disc_megalovania.desc": "UNDERTALE - Megalovania",
+    "item.mubble.music_disc_popple_battle.desc": "Mario and Luigi: Superstar Saga + Bowser's Minions - Popple Battle",
+    "item.mubble.music_disc_reflection.desc": "Celeste - Reflection",
+    "item.mubble.music_disc_rude_buster.desc": "DELTARUNE - Rude Buster",
+    "item.mubble.music_disc_shark_bytes.desc": "Splatoon 2 - Shark Bytes",
+    "item.mubble.music_disc_sound_stage.desc": "Super Mario Party - Sound Stage",
+    "item.mubble.music_disc_studiopolis_act1.desc": "Sonic Mania - Studiopolis [Act 1]",
+    "item.mubble.music_disc_the_grand_finale.desc": "Mario & Luigi: Bowser’s Inside Story + Bowser Jr.’s Journey - The Grand Final",
+    "item.mubble.music_disc_type_a.desc": "Tetris 99 - Type A",
+    "item.mubble.music_disc_vampire_killer.desc": "Castlevania Judgement - Vampire Killer",
+    "item.mubble.music_disc_vs_champion_red_and_blue.desc": "Pokémon Sun & Moon - VS. Champion Red & Blue",
 
-    "item.mubble.record.nb_sweden.desc": "C418 - Sweden (NoteBlock Remix)",
-    "item.mubble.record.nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)",
-    "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
-    "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
+    "//item.mubble.remix_disc_nb_beware_the_forest_mushrooms": "Music Disc",
+    "//item.mubble.remix_disc_nb_buoy_base_galaxy": "Music Disc",
+    "//item.mubble.remix_disc_nb_fly_octo_fly": "Music Disc",
+    "//item.mubble.remix_disc_nb_harvest_hazards": "Music Disc",
+    "//item.mubble.remix_disc_nb_sweden": "Music Disc",
+    "//item.mubble.remix_disc_nb_waluigi_pinball": "Music Disc",
+    "item.mubble.remix_disc_nb_beware_the_forest_mushrooms.desc": "Super Mario RPG: Legend of the Seven Stars - Beware the Forest's Mushrooms (NoteBlock Remix)",
+    "item.mubble.remix_disc_nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)",
+    "item.mubble.remix_disc_nb_fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly (NoteBlock Remix)",
+    "item.mubble.remix_disc_nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (NoteBlock Remix)",
+    "item.mubble.remix_disc_nb_sweden.desc": "C418 - Sweden (NoteBlock Remix)",
+    "item.mubble.remix_disc_nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
 
     "comment": "COSTUMES",
     "item.mubble.headphones": "Casque audio",
@@ -305,7 +348,7 @@
     "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]",
     "//commands.motion.success": "<newline>",
 
-    //OTHER
+    "comment": "OTHER",
     "item.mubble.cappy.secret_status": "Tellement paradoxal... :)",
     "item.mubble.bandana.secret_status": "C'est pour toi, §6Pixel§r !",
     "item.mubble.noteblock_head.secret_status": "Hé ! Je croyais que tu avais déjà ça sur la tête, §6Evan§r !",
