--- a/src/main/resources/assets/mubble/lang/fr_fe.json
+++ b/src/main/resources/assets/mubble/lang/fr_fe.json
@@ -255,7 +255,7 @@
     "item.mubble.music_disc_shark_bytes.desc": "Splatoon 2 - Shark Bytes",
     "item.mubble.music_disc_sound_stage.desc": "Super Mario Party - Sound Stage",
     "item.mubble.music_disc_studiopolis_act1.desc": "Sonic Mania - Studiopolis [Act 1]",
-    "item.mubble.music_disc_the_grand_finale.desc": "Mario & Luigi: Bowser’s Inside Story + Bowser Jr.’s Journey - The Grand Final",
+    "item.mubble.music_disc_the_grand_finale.desc": "Mario & Luigi: Bowser’s Inside Story + Bowser Jr.’s Journey - The Grand Finale",
     "item.mubble.music_disc_type_a.desc": "Tetris 99 - Type A",
     "item.mubble.music_disc_vampire_killer.desc": "Castlevania Judgement - Vampire Killer",
     "item.mubble.music_disc_vs_champion_red_and_blue.desc": "Pokémon Sun & Moon - VS. Champion Red & Blue",
