--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -221,26 +221,26 @@
 
     "item.mubble.annoying_dog": "Cão Irritante",
 
-    "//item.mubble.blank_music_disc": "Blank Music Disc",
-    "//item.mubble.music_disc_battlefield": "Music Disc",
-    "//item.mubble.music_disc_champions_road": "Music Disc",
-    "//item.mubble.music_disc_confronting_myself": "Music Disc",
-    "//item.mubble.music_disc_electroplankton_medley": "Music Disc",
-    "//item.mubble.music_disc_fields_of_hopes_and_dreams": "Music Disc",
-    "//item.mubble.music_disc_kass_theme": "Music Disc",
-    "//item.mubble.music_disc_lost_painting": "Music Disc",
-    "//item.mubble.music_disc_mad_mew_mew": "Music Disc",
-    "//item.mubble.music_disc_megalovania": "Music Disc",
-    "//item.mubble.music_disc_popple_battle": "Music Disc",
-    "//item.mubble.music_disc_reflection": "Music Disc",
-    "//item.mubble.music_disc_rude_buster": "Music Disc",
-    "//item.mubble.music_disc_shark_bytes": "Music Disc",
-    "//item.mubble.music_disc_sound_stage": "Music Disc",
-    "//item.mubble.music_disc_studiopolis_act1": "Music Disc",
-    "//item.mubble.music_disc_the_grand_finale": "Music Disc",
-    "//item.mubble.music_disc_type_a": "Music Disc",
-    "//item.mubble.music_disc_vampire_killer": "Music Disc",
-    "//item.mubble.music_disc_vs_champion_red_and_blue": "Music Disc",
+    "item.mubble.blank_music_disc": "Disco de Música em Branco",
+    "item.mubble.music_disc_battlefield": "Disco de Música",
+    "item.mubble.music_disc_champions_road": "Disco de Música",
+    "item.mubble.music_disc_confronting_myself": "Disco de Música",
+    "item.mubble.music_disc_electroplankton_medley": "Disco de Música",
+    "item.mubble.music_disc_fields_of_hopes_and_dreams": "Disco de Música",
+    "item.mubble.music_disc_kass_theme": "Disco de Música",
+    "item.mubble.music_disc_lost_painting": "Disco de Música",
+    "item.mubble.music_disc_mad_mew_mew": "Disco de Música",
+    "item.mubble.music_disc_megalovania": "Disco de Música",
+    "item.mubble.music_disc_popple_battle": "Disco de Música",
+    "item.mubble.music_disc_reflection": "Disco de Música",
+    "item.mubble.music_disc_rude_buster": "Disco de Música",
+    "item.mubble.music_disc_shark_bytes": "Disco de Música",
+    "item.mubble.music_disc_sound_stage": "Disco de Música",
+    "item.mubble.music_disc_studiopolis_act1": "Disco de Música",
+    "item.mubble.music_disc_the_grand_finale": "Disco de Música",
+    "item.mubble.music_disc_type_a": "Disco de Música",
+    "item.mubble.music_disc_vampire_killer": "Disco de Música",
+    "item.mubble.music_disc_vs_champion_red_and_blue": "Disco de Música",
     "item.mubble.music_disc_battlefield.desc": "Super Smash Bros. Ultimate - Battlefield",
     "item.mubble.music_disc_champions_road.desc": "Super Mario 3D World - Champion's Road",
     "item.mubble.music_disc_confronting_myself.desc": "Celeste - Confronting Myself",
@@ -261,12 +261,12 @@
     "item.mubble.music_disc_vampire_killer.desc": "Castlevania Judgement - Vampire Killer",
     "item.mubble.music_disc_vs_champion_red_and_blue.desc": "Pokémon Sun & Moon - VS. Champion Red & Blue",
 
-    "//item.mubble.remix_disc_nb_beware_the_forest_mushrooms": "Music Disc",
-    "//item.mubble.remix_disc_nb_buoy_base_galaxy": "Music Disc",
-    "//item.mubble.remix_disc_nb_fly_octo_fly": "Music Disc",
-    "//item.mubble.remix_disc_nb_harvest_hazards": "Music Disc",
-    "//item.mubble.remix_disc_nb_sweden": "Music Disc",
-    "//item.mubble.remix_disc_nb_waluigi_pinball": "Music Disc",
+    "item.mubble.remix_disc_nb_beware_the_forest_mushrooms": "Disco de Música",
+    "item.mubble.remix_disc_nb_buoy_base_galaxy": "Disco de Música",
+    "item.mubble.remix_disc_nb_fly_octo_fly": "Disco de Música",
+    "item.mubble.remix_disc_nb_harvest_hazards": "Disco de Música",
+    "item.mubble.remix_disc_nb_sweden": "Disco de Música",
+    "item.mubble.remix_disc_nb_waluigi_pinball": "Disco de Música",
     "item.mubble.remix_disc_nb_beware_the_forest_mushrooms.desc": "Super Mario RPG: Legend of the Seven Stars - Beware the Forest's Mushrooms (NoteBlock Remix)",
     "item.mubble.remix_disc_nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)",
     "item.mubble.remix_disc_nb_fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly (NoteBlock Remix)",
