--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -350,7 +350,7 @@
     "//commands.motion.success": "<newline>",
 
     "comment": "OTHER",
-    "item.mubble.cappy.secret_status": "How paradoxal... :)",
+    "item.mubble.snorlax_hat.secret_status": "How paradoxal... :)",
     "item.mubble.bandana.secret_status": "That's for you, §6Pixel§r!",
     "item.mubble.noteblock_head.secret_status": "Hey! I thought you already had this on your head, §6Evan§r!",
     "item.mubble.mayro_cap.secret_status": "Come on, you're the one who needs it the least, aren't you, Mr. \"§6Sossie§r\"?"
