--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -350,7 +350,7 @@
     "//commands.motion.success": "<newline>",
 
     "comment": "OTHER",
-    "item.mubble.cappy.secret_status": "(: ˙˙˙lɐxopɐɹɐd ʍoH",
+    "item.mubble.snorlax_hat.secret_status": "(: ˙˙˙lɐxopɐɹɐd ʍoH",
     "item.mubble.bandana.secret_status": "¡§6lǝxᴉԀ§r 'noʎ ɹoɟ s,ʇɐɥ┴",
     "item.mubble.noteblock_head.secret_status": "¡§6uɐʌƎ§r 'pɐǝɥ ɹnoʎ uo sᴉɥʇ pɐɥ ʎpɐǝɹlɐ noʎ ʇɥƃnoɥʇ I ¡ʎǝH",
     "item.mubble.mayro_cap.secret_status": "¿,,§6ǝᴉssoS§r,, ˙ɹW 'noʎ ʇ,uǝɹɐ 'ʇsɐǝl ǝɥʇ ʇᴉ spǝǝu oɥʍ ǝuo ǝɥʇ ǝɹ,noʎ 'uo ǝɯoƆ"
