--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -350,7 +350,7 @@
     "commands.motion.success": "Mudou o movimento de %s para %s, %s, %s",
 
     "comment": "OTHER",
-    "item.mubble.cappy.secret_status": "Quão paradoxal... :)",
+    "item.mubble.snorlax_hat.secret_status": "Quão paradoxal... :)",
     "item.mubble.bandana.secret_status": "Aquilo é para você, §6Pixel§r!",
     "item.mubble.noteblock_head.secret_status": "Oi! Eu pensei que você já tinha isso em sua cabeça, §6Evan§r!",
     "item.mubble.mayro_cap.secret_status": "Venha, você é quem menos precisa, né, Mr. \"§6Sossie§r\"?"
