--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -350,7 +350,7 @@
     "commands.motion.success": "Ändert die Bewegung von %s zu %s, %s, %s",
 
     "comment": "OTHER",
-    "item.mubble.cappy.secret_status": "Wie widersprüchlich... :)",
+    "item.mubble.snorlax_hat.secret_status": "Wie widersprüchlich... :)",
     "item.mubble.bandana.secret_status": "Das ist für dich, §6Pixel§r!",
     "item.mubble.noteblock_head.secret_status": "Hey! Ich dachte, du hättest das schon auf dem Kopf, §6Evan§r!",
     "item.mubble.mayro_cap.secret_status": "Komm schon, du bist der jenige der es am wenigsten braucht. Bist du's nicht, Mr. \"§6Sossie§r\"?"
