--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -349,7 +349,7 @@
     "//commands.motion.success": "<newline>",
 
     "comment": "OTHER",
-    "item.mubble.cappy.secret_status": "Tellement paradoxal... :)",
+    "item.mubble.snorlax_hat.secret_status": "Tellement paradoxal... :)",
     "item.mubble.bandana.secret_status": "C'est pour toi, §6Pixel§r !",
     "item.mubble.noteblock_head.secret_status": "Hé ! Je croyais que tu avais déjà ça sur la tête, §6Evan§r !",
     "item.mubble.mayro_cap.secret_status": "Franchement, t'es le seul à en avoir le moins besoin, n'est-ce pas, Mr. \"§6Sossie§r\" ?"
