--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -350,7 +350,7 @@
     "commands.motion.success": "Beweging van %s veranderd naar %s, %s, %s",
 
     "comment": "OTHER",
-    "item.mubble.cappy.secret_status": "Hoe paradoxaal... :)",
+    "item.mubble.snorlax_hat.secret_status": "Hoe paradoxaal... :)",
     "item.mubble.bandana.secret_status": "Dat is voor jou, §6Pixel§r!",
     "item.mubble.noteblock_head.secret_status": "Hey! Ik dacht dat je dit al op je hoofd had, §6Evan§r!",
     "item.mubble.mayro_cap.secret_status": "Kom op, jij bent de laatste die dit nodig heeft, of niet, Mr. \"§6Sossie§r\"?"
