--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -7,86 +7,86 @@
     "comment": "BLOCKS",
     "block.mubble.vanadium_block": "Bloco de Vanadium",
     "block.mubble.vanadium_ore": "Minério de Vanadium",
-    "//block.mubble.blue_bricks": "Blue Bricks",
-    "//block.mubble.light_blue_bricks": "Light Blue Bricks",
-    "//block.mubble.cyan_bricks": "Cyan Bricks",
-    "//block.mubble.green_bricks": "Green Bricks",
-    "//block.mubble.lime_bricks": "Lime Bricks",
-    "//block.mubble.yellow_bricks": "Yellow Bricks",
-    "//block.mubble.orange_bricks": "Orange Bricks",
-    "//block.mubble.red_bricks": "Red Bricks",
-    "//block.mubble.pink_bricks": "Pink Bricks",
-    "//block.mubble.magenta_bricks": "Magenta Bricks",
-    "//block.mubble.purple_bricks": "Purple Bricks",
-    "//block.mubble.brown_bricks": "Brown Bricks",
-    "//block.mubble.white_bricks": "White Bricks",
-    "//block.mubble.light_gray_bricks": "Light Gray Bricks",
-    "//block.mubble.gray_bricks": "Gray Bricks",
-    "//block.mubble.black_bricks": "Black Bricks",
-    "//block.mubble.blue_brick_stairs": "Blue Brick Stairs",
-    "//block.mubble.light_blue_brick_stairs": "Light Blue Brick Stairs",
-    "//block.mubble.cyan_brick_stairs": "Cyan Brick Stairs",
-    "//block.mubble.green_brick_stairs": "Green Brick Stairs",
-    "//block.mubble.lime_brick_stairs": "Lime Brick Stairs",
-    "//block.mubble.yellow_brick_stairs": "Yellow Brick Stairs",
-    "//block.mubble.orange_brick_stairs": "Orange Brick Stairs",
-    "//block.mubble.red_brick_stairs": "Red Brick Stairs",
-    "//block.mubble.pink_brick_stairs": "Pink Brick Stairs",
-    "//block.mubble.magenta_brick_stairs": "Magenta Brick Stairs",
-    "//block.mubble.purple_brick_stairs": "Purple Brick Stairs",
-    "//block.mubble.brown_brick_stairs": "Brown Brick Stairs",
-    "//block.mubble.white_brick_stairs": "White Brick Stairs",
-    "//block.mubble.light_gray_brick_stairs": "Light Gray Brick Stairs",
-    "//block.mubble.gray_brick_stairs": "Gray Brick Stairs",
-    "//block.mubble.black_brick_stairs": "Black Brick Stairs",
-    "//block.mubble.blue_brick_slab": "Blue Brick Slab",
-    "//block.mubble.light_blue_brick_slab": "Light Blue Brick Slab",
-    "//block.mubble.cyan_brick_slab": "Cyan Brick Slab",
-    "//block.mubble.green_brick_slab": "Green Brick Slab",
-    "//block.mubble.lime_brick_slab": "Lime Brick Slab",
-    "//block.mubble.yellow_brick_slab": "Yellow Brick Slab",
-    "//block.mubble.orange_brick_slab": "Orange Brick Slab",
-    "//block.mubble.red_brick_slab": "Red Brick Slab",
-    "//block.mubble.pink_brick_slab": "Pink Brick Slab",
-    "//block.mubble.magenta_brick_slab": "Magenta Brick Slab",
-    "//block.mubble.purple_brick_slab": "Purple Brick Slab",
-    "//block.mubble.brown_brick_slab": "Brown Brick Slab",
-    "//block.mubble.white_brick_slab": "White Brick Slab",
-    "//block.mubble.light_gray_brick_slab": "Light Gray Brick Slab",
-    "//block.mubble.gray_brick_slab": "Gray Brick Slab",
-    "//block.mubble.black_brick_slab": "Black Brick Slab",
-    "//block.mubble.blue_brick_vertical_slab": "Blue Brick Vertical Slab",
-    "//block.mubble.light_blue_brick_vertical_slab": "Light Blue Brick Vertical Slab",
-    "//block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
-    "//block.mubble.green_brick_vertical_slab": "Green Brick Vertical Slab",
-    "//block.mubble.lime_brick_vertical_slab": "Lime Brick Vertical Slab",
-    "//block.mubble.yellow_brick_vertical_slab": "Yellow Brick Vertical Slab",
-    "//block.mubble.orange_brick_vertical_slab": "Orange Brick Vertical Slab",
-    "//block.mubble.red_brick_vertical_slab": "Red Brick Vertical Slab",
-    "//block.mubble.pink_brick_vertical_slab": "Pink Brick Vertical Slab",
-    "//block.mubble.magenta_brick_vertical_slab": "Magenta Brick Vertical Slab",
-    "//block.mubble.purple_brick_vertical_slab": "Purple Brick Vertical Slab",
-    "//block.mubble.brown_brick_vertical_slab": "Brown Brick Vertical Slab",
-    "//block.mubble.white_brick_vertical_slab": "White Brick Vertical Slab",
-    "//block.mubble.light_gray_brick_vertical_slab": "Light Gray Brick Vertical Slab",
-    "//block.mubble.gray_brick_vertical_slab": "Gray Brick Vertical Slab",
-    "//block.mubble.black_brick_vertical_slab": "Black Brick Vertical Slab",
-    "//block.mubble.blue_brick_wall": "Blue Brick Wall",
-    "//block.mubble.light_blue_brick_wall": "Light Blue Brick Wall",
-    "//block.mubble.cyan_brick_wall": "Cyan Brick Wall",
-    "//block.mubble.green_brick_wall": "Green Brick Wall",
-    "//block.mubble.lime_brick_wall": "Lime Brick Wall",
-    "//block.mubble.yellow_brick_wall": "Yellow Brick Wall",
-    "//block.mubble.orange_brick_wall": "Orange Brick Wall",
-    "//block.mubble.red_brick_wall": "Red Brick Wall",
-    "//block.mubble.pink_brick_wall": "Pink Brick Wall",
-    "//block.mubble.magenta_brick_wall": "Magenta Brick Wall",
-    "//block.mubble.purple_brick_wall": "Purple Brick Wall",
-    "//block.mubble.brown_brick_wall": "Brown Brick Wall",
-    "//block.mubble.white_brick_wall": "White Brick Wall",
-    "//block.mubble.light_gray_brick_wall": "Light Gray Brick Wall",
-    "//block.mubble.gray_brick_wall": "Gray Brick Wall",
-    "//block.mubble.black_brick_wall": "Black Brick Wall",
+    "block.mubble.blue_bricks": "Tijolos Azuis",
+    "block.mubble.light_blue_bricks": "Tijolos Azul Claros",
+    "block.mubble.cyan_bricks": "Tijolos Ciano",
+    "block.mubble.green_bricks": "Tijolos Verdes",
+    "block.mubble.lime_bricks": "Tijolos Lima",
+    "block.mubble.yellow_bricks": "Tijolos Amarelos",
+    "block.mubble.orange_bricks": "Tijolos Laranja",
+    "block.mubble.red_bricks": "Tijolos Vermelhos",
+    "block.mubble.pink_bricks": "Tijolos Rosa",
+    "block.mubble.magenta_bricks": "Tijolos Magenta",
+    "block.mubble.purple_bricks": "Tijolos Roxos",
+    "block.mubble.brown_bricks": "Tijolos Marrons",
+    "block.mubble.white_bricks": "Tijolos Brancos",
+    "block.mubble.light_gray_bricks": "Tijolos Cinza Claros",
+    "block.mubble.gray_bricks": "Tijolos Cinza",
+    "block.mubble.black_bricks": "Tijolos Pretos",
+    "block.mubble.blue_brick_stairs": "Escadas de Tijolo Azul",
+    "block.mubble.light_blue_brick_stairs": "Escadas de Tijolo Azul Claro",
+    "block.mubble.cyan_brick_stairs": "Escadas de Tijolo Ciano",
+    "block.mubble.green_brick_stairs": "Escadas de Tijolo Verde",
+    "block.mubble.lime_brick_stairs": "Escadas de Tijolo Lima",
+    "block.mubble.yellow_brick_stairs": "Escadas de Tijolo Amarelo",
+    "block.mubble.orange_brick_stairs": "Escadas de Tijolo Laranja",
+    "block.mubble.red_brick_stairs": "Escadas de Tijolo Vermelho",
+    "block.mubble.pink_brick_stairs": "Escadas de Tijolo Rosa",
+    "block.mubble.magenta_brick_stairs": "Escadas de Tijolo Magenta",
+    "block.mubble.purple_brick_stairs": "Escadas de Tijolo Roxo",
+    "block.mubble.brown_brick_stairs": "Escadas de Tijolo Marrom",
+    "block.mubble.white_brick_stairs": "Escadas de Tijolo Branco",
+    "block.mubble.light_gray_brick_stairs": "Escadas de Tijolo Cinza Claro",
+    "block.mubble.gray_brick_stairs": "Escadas de Tijolo Cinza",
+    "block.mubble.black_brick_stairs": "Escadas de Tijolo Preto",
+    "block.mubble.blue_brick_slab": "Laje de Tijolo Azul",
+    "block.mubble.light_blue_brick_slab": "Laje de Tijolo Azul Claro",
+    "block.mubble.cyan_brick_slab": "Laje de Tijolo Ciano",
+    "block.mubble.green_brick_slab": "Laje de Tijolo Verde",
+    "block.mubble.lime_brick_slab": "Laje de Tijolo Lima",
+    "block.mubble.yellow_brick_slab": "Laje de Tijolo Amarelo",
+    "block.mubble.orange_brick_slab": "Laje de Tijolo Laranja",
+    "block.mubble.red_brick_slab": "Laje de Tijolo Vermelho",
+    "block.mubble.pink_brick_slab": "Laje de Tijolo Rosa",
+    "block.mubble.magenta_brick_slab": "Laje de Tijolo Magenta",
+    "block.mubble.purple_brick_slab": "Laje de Tijolo Roxo",
+    "block.mubble.brown_brick_slab": "Laje de Tijolo Marrom",
+    "block.mubble.white_brick_slab": "Laje de Tijolo Branco",
+    "block.mubble.light_gray_brick_slab": "Laje de Tijolo Cinza Claro",
+    "block.mubble.gray_brick_slab": "Laje de Tijolo Cinza",
+    "block.mubble.black_brick_slab": "Laje de Tijolo Preto",
+    "block.mubble.blue_brick_vertical_slab": "Laje Vertical de Tijolo Azul",
+    "block.mubble.light_blue_brick_vertical_slab": "Laje Vertical de Tijolo Azul Claro",
+    "block.mubble.cyan_brick_vertical_slab": "Laje Vertical de Tijolo Ciano",
+    "block.mubble.green_brick_vertical_slab": "Laje Vertical de Tijolo Verde",
+    "block.mubble.lime_brick_vertical_slab": "Laje Vertical de Tijolo Lima",
+    "block.mubble.yellow_brick_vertical_slab": "Laje Vertical de Tijolo Amarelo",
+    "block.mubble.orange_brick_vertical_slab": "Laje Vertical de Tijolo Laranja",
+    "block.mubble.red_brick_vertical_slab": "Laje Vertical de Tijolo Vermelho",
+    "block.mubble.pink_brick_vertical_slab": "Laje Vertical de Tijolo Rosa",
+    "block.mubble.magenta_brick_vertical_slab": "Laje Vertical de Tijolo Magenta",
+    "block.mubble.purple_brick_vertical_slab": "Laje Vertical de Tijolo Roxo",
+    "block.mubble.brown_brick_vertical_slab": "Laje Vertical de Tijolo Marrom",
+    "block.mubble.white_brick_vertical_slab": "Laje Vertical de Tijolo Branco",
+    "block.mubble.light_gray_brick_vertical_slab": "Laje Vertical de Tijolo Cinza Claro",
+    "block.mubble.gray_brick_vertical_slab": "Laje Vertical de Tijolo Cinza",
+    "block.mubble.black_brick_vertical_slab": "Laje Vertical de Tijolo Preto",
+    "block.mubble.blue_brick_wall": "Parede de Tijolo Azul",
+    "block.mubble.light_blue_brick_wall": "Parede de Tijolo Azul Claro",
+    "block.mubble.cyan_brick_wall": "Parede de Tijolo Ciano",
+    "block.mubble.green_brick_wall": "Parede de Tijolo Verde",
+    "block.mubble.lime_brick_wall": "Parede de Tijolo Lima",
+    "block.mubble.yellow_brick_wall": "Parede de Tijolo Amarelo",
+    "block.mubble.orange_brick_wall": "Parede de Tijolo Laranja",
+    "block.mubble.red_brick_wall": "Parede de Tijolo Vermelho",
+    "block.mubble.pink_brick_wall": "Parede de Tijolo Rosa",
+    "block.mubble.magenta_brick_wall": "Parede de Tijolo Magenta",
+    "block.mubble.purple_brick_wall": "Parede de Tijolo Roxo",
+    "block.mubble.brown_brick_wall": "Parede de Tijolo Marrom",
+    "block.mubble.white_brick_wall": "Parede de Tijolo Branco",
+    "block.mubble.light_gray_brick_wall": "Parede de Tijolo Cinza Claro",
+    "block.mubble.gray_brick_wall": "Parede de Tijolo Cinza",
+    "block.mubble.black_brick_wall": "Parede de Tijolo Preto",
     "block.mubble.blunite": "Blunite",
     "block.mubble.blunite_stairs": "Escadas de Blunite",
     "block.mubble.blunite_wall": "Parede de Blunite",
@@ -233,19 +233,19 @@
     "block.mubble.scarlet_mushroom": "Cogumelo Escarlate",
     "block.mubble.scarlet_orchid": "Orquídea Escarlate",
 
-    "//block.mubble.girder": "Girder",
-    "//block.mubble.mirror_temple_bricks": "Mirror Temple Bricks",
-    "//block.mubble.mirror_temple_brick_stairs": "Mirror Temple Brick Stairs",
-    "//block.mubble.mirror_temple_brick_slab": "Mirror Temple Brick Slab",
-    "//block.mubble.mirror_temple_brick_vertical_slab": "Mirror Temple Brick Vertical Slab",
-    "//block.mubble.mirror_temple_brick_wall": "Mirror Temple Brick Wall",
-    "//block.mubble.old_site_bricks": "Old Site Bricks",
-    "//block.mubble.old_site_brick_stairs": "Old Site Brick Stairs",
-    "//block.mubble.old_site_brick_slab": "Old Site Brick Slab",
-    "//block.mubble.old_site_brick_vertical_slab": "Old Site Brick Vertical Slab",
-    "//block.mubble.old_site_brick_wall": "Old Site Brick Wall",
+    "block.mubble.girder": "Viga",
+    "block.mubble.mirror_temple_bricks": "Tijolos de Templo do Espelho",
+    "block.mubble.mirror_temple_brick_stairs": "Escadas de Tijolo de Templo do Espelho",
+    "block.mubble.mirror_temple_brick_slab": "Laje de Tijolo de Templo do Espelho",
+    "block.mubble.mirror_temple_brick_vertical_slab": "Laje Vertical de Tijolo de Templo do Espelho",
+    "block.mubble.mirror_temple_brick_wall": "Parede de Tijolo de Templo do Espelho",
+    "block.mubble.old_site_bricks": "Tijolos de Terreno Antigo",
+    "block.mubble.old_site_brick_stairs": "Escadas de Tijolo de Terreno Antigo",
+    "block.mubble.old_site_brick_slab": "Laje de Tijolo de Terreno Antigo",
+    "block.mubble.old_site_brick_vertical_slab": "Laje Vertical de Tijolo de Terreno Antigo",
+    "block.mubble.old_site_brick_wall": "Parede de Tijolo de Terreno Antigo",
     "block.mubble.elder_pebbles": "Seixos Antigos",
-    "//block.mubble.space_jam": "Space Jam",
+    "block.mubble.space_jam": "Geléia Espacial",
     "block.mubble.space_obsidian": "Obsidiana Espacial",
 
     "block.mubble.blue_puyo": "Puyo Azul",
