--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -425,6 +425,9 @@
     "item.mubble.remix_disc_nb_sweden.desc": "C418 - Sweden (NoteBlock Remix)",
     "item.mubble.remix_disc_nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
 
+    "//item.mubble.toad_spawn_egg":"Toad Spawn Egg",
+    "//item.mubble.chincho_spawn_egg":"Chincho Spawn Egg",
+
     "comment": "COSTUMES",
     "item.mubble.headphones": "Casque audio",
     "item.mubble.christmas_hat": "Bonnet de Noël",
