Added Flying Block's name in language files

--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -462,6 +462,7 @@
     "comment": "ENTITIES",
     "entity.mubble.toad": "pɐo┴",
     "entity.mubble.chincho": "oɥɔuᴉɥƆ",
+    "//entity.mubble.flying_block": "Flying Block",
 
     "comment": "SUBTITLES",
     "subtitles.block.question_block.mubble.loot.super_mushroom": "ɯooɹɥsnɯ ɹǝdns sdoɹp ʞɔolᗺ ¿",
