--- a/src/main/resources/assets/mubble/lang/fr_fe.json
+++ b/src/main/resources/assets/mubble/lang/fr_fe.json
@@ -462,6 +462,7 @@
     "comment": "ENTITIES",
     "entity.mubble.toad": "BUP BUP",
     "entity.mubble.chincho": "chienchau",
+    "//entity.mubble.flying_block": "Flying Block",
 
     "comment": "SUBTITLES",
     "subtitles.block.question_block.mubble.loot.super_mushroom": "cool champi sorti ? blok",
