--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -307,26 +307,25 @@
     "block.mubble.yellow_studiopolis_clapper": "Clap jaune de Studiopolis",
     "block.mubble.blue_studiopolis_clapper": "Clap bleu de Studiopolis",
     "block.mubble.spring": "Ressort",
-    "//block.mubble.spring": "<newline>",
 
     "block.mubble.scarlet_grass_block": "Bloc d'herbe écarlate",
     "block.mubble.scarlet_grass": "Herbe écarlate",
     "block.mubble.scarlet_mushroom": "Champignon écarlate",
     "block.mubble.scarlet_orchid": "Orchidée écarlate",
 
-    "//block.mubble.girder": "Girder",
-    "//block.mubble.mirror_temple_bricks": "Mirror Temple Bricks",
-    "//block.mubble.mirror_temple_brick_stairs": "Mirror Temple Brick Stairs",
-    "//block.mubble.mirror_temple_brick_slab": "Mirror Temple Brick Slab",
-    "//block.mubble.mirror_temple_brick_vertical_slab": "Mirror Temple Brick Vertical Slab",
-    "//block.mubble.mirror_temple_brick_wall": "Mirror Temple Brick Wall",
-    "//block.mubble.old_site_bricks": "Old Site Bricks",
-    "//block.mubble.old_site_brick_stairs": "Old Site Brick Stairs",
-    "//block.mubble.old_site_brick_slab": "Old Site Brick Slab",
-    "//block.mubble.old_site_brick_vertical_slab": "Old Site Brick Vertical Slab",
-    "//block.mubble.old_site_brick_wall": "Old Site Brick Wall",
+    "block.mubble.girder": "Poutre",
+    "block.mubble.mirror_temple_bricks": "Briques du temple miroir",
+    "block.mubble.mirror_temple_brick_stairs": "Escaliers en brique du temple miroir",
+    "block.mubble.mirror_temple_brick_slab": "Dalle en brique du temple miroir",
+    "block.mubble.mirror_temple_brick_vertical_slab": "Dalle verticale en brique du temple miroir",
+    "block.mubble.mirror_temple_brick_wall": "Muret en brique du temple miroir",
+    "block.mubble.old_site_bricks": "Briques du vieux site",
+    "block.mubble.old_site_brick_stairs": "Escaliers en brique du vieux site",
+    "block.mubble.old_site_brick_slab": "Dalle en brique du vieux site",
+    "block.mubble.old_site_brick_vertical_slab": "Dalle verticale en brique du vieux site",
+    "block.mubble.old_site_brick_wall": "Muret en brique du vieux site",
     "block.mubble.elder_pebbles": "Anciens galets",
-    "//block.mubble.space_jam": "Space Jam",
+    "block.mubble.space_jam": "Confiture spatiale",
     "block.mubble.space_obsidian": "Obsidienne spatiale",
 
     "block.mubble.blue_puyo": "Puyo bleu",
@@ -370,28 +369,28 @@
 
     "item.mubble.smash_ball": "Balle Smash",
 
-    "item.mubble.annoying_dog": "Chien Agaçant",
+    "item.mubble.annoying_dog": "Chien agaçant",
 
     "item.mubble.blank_music_disc": "Disque de musique vide",
-    "//item.mubble.music_disc_battlefield": "Music Disc",
-    "//item.mubble.music_disc_champions_road": "Music Disc",
-    "//item.mubble.music_disc_confronting_myself": "Music Disc",
-    "//item.mubble.music_disc_electroplankton_medley": "Music Disc",
-    "//item.mubble.music_disc_fields_of_hopes_and_dreams": "Music Disc",
-    "//item.mubble.music_disc_kass_theme": "Music Disc",
-    "//item.mubble.music_disc_lost_painting": "Music Disc",
-    "//item.mubble.music_disc_mad_mew_mew": "Music Disc",
-    "//item.mubble.music_disc_megalovania": "Music Disc",
-    "//item.mubble.music_disc_popple_battle": "Music Disc",
-    "//item.mubble.music_disc_reflection": "Music Disc",
-    "//item.mubble.music_disc_rude_buster": "Music Disc",
-    "//item.mubble.music_disc_shark_bytes": "Music Disc",
-    "//item.mubble.music_disc_sound_stage": "Music Disc",
-    "//item.mubble.music_disc_studiopolis_act1": "Music Disc",
-    "//item.mubble.music_disc_the_grand_finale": "Music Disc",
-    "//item.mubble.music_disc_type_a": "Music Disc",
-    "//item.mubble.music_disc_vampire_killer": "Music Disc",
-    "//item.mubble.music_disc_vs_champion_red_and_blue": "Music Disc",
+    "item.mubble.music_disc_battlefield": "Disque de musique",
+    "item.mubble.music_disc_champions_road": "Disque de musique",
+    "item.mubble.music_disc_confronting_myself": "Disque de musique",
+    "item.mubble.music_disc_electroplankton_medley": "Disque de musique",
+    "item.mubble.music_disc_fields_of_hopes_and_dreams": "Disque de musique",
+    "item.mubble.music_disc_kass_theme": "Disque de musique",
+    "item.mubble.music_disc_lost_painting": "Disque de musique",
+    "item.mubble.music_disc_mad_mew_mew": "Disque de musique",
+    "item.mubble.music_disc_megalovania": "Disque de musique",
+    "item.mubble.music_disc_popple_battle": "Disque de musique",
+    "item.mubble.music_disc_reflection": "Disque de musique",
+    "item.mubble.music_disc_rude_buster": "Disque de musique",
+    "item.mubble.music_disc_shark_bytes": "Disque de musique",
+    "item.mubble.music_disc_sound_stage": "Disque de musique",
+    "item.mubble.music_disc_studiopolis_act1": "Disque de musique",
+    "item.mubble.music_disc_the_grand_finale": "Disque de musique",
+    "item.mubble.music_disc_type_a": "Disque de musique",
+    "item.mubble.music_disc_vampire_killer": "Disque de musique",
+    "item.mubble.music_disc_vs_champion_red_and_blue": "Disque de musique",
     "item.mubble.music_disc_battlefield.desc": "Super Smash Bros. Ultimate - Battlefield",
     "item.mubble.music_disc_champions_road.desc": "Super Mario 3D World - Champion's Road",
     "item.mubble.music_disc_confronting_myself.desc": "Celeste - Confronting Myself",
@@ -412,12 +411,12 @@
     "item.mubble.music_disc_vampire_killer.desc": "Castlevania Judgement - Vampire Killer",
     "item.mubble.music_disc_vs_champion_red_and_blue.desc": "Pokémon Sun & Moon - VS. Champion Red & Blue",
 
-    "//item.mubble.remix_disc_nb_beware_the_forest_mushrooms": "Music Disc",
-    "//item.mubble.remix_disc_nb_buoy_base_galaxy": "Music Disc",
-    "//item.mubble.remix_disc_nb_fly_octo_fly": "Music Disc",
-    "//item.mubble.remix_disc_nb_harvest_hazards": "Music Disc",
-    "//item.mubble.remix_disc_nb_sweden": "Music Disc",
-    "//item.mubble.remix_disc_nb_waluigi_pinball": "Music Disc",
+    "item.mubble.remix_disc_nb_beware_the_forest_mushrooms": "Disque de remix",
+    "item.mubble.remix_disc_nb_buoy_base_galaxy": "Disque de remix",
+    "item.mubble.remix_disc_nb_fly_octo_fly": "Disque de remix",
+    "item.mubble.remix_disc_nb_harvest_hazards": "Disque de remix",
+    "item.mubble.remix_disc_nb_sweden": "Disque de remix",
+    "item.mubble.remix_disc_nb_waluigi_pinball": "Disque de remix",
     "item.mubble.remix_disc_nb_beware_the_forest_mushrooms.desc": "Super Mario RPG: Legend of the Seven Stars - Beware the Forest's Mushrooms (NoteBlock Remix)",
     "item.mubble.remix_disc_nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (NoteBlock Remix)",
     "item.mubble.remix_disc_nb_fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly (NoteBlock Remix)",
@@ -425,8 +424,8 @@
     "item.mubble.remix_disc_nb_sweden.desc": "C418 - Sweden (NoteBlock Remix)",
     "item.mubble.remix_disc_nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
 
-    "//item.mubble.toad_spawn_egg":"Toad Spawn Egg",
-    "//item.mubble.chincho_spawn_egg":"Chincho Spawn Egg",
+    "item.mubble.toad_spawn_egg":"Œuf de Toad",
+    "item.mubble.chincho_spawn_egg":"Œuf de Chincho",
 
     "comment": "COSTUMES",
     "item.mubble.headphones": "Casque audio",
@@ -463,21 +462,21 @@
     "comment": "ENTITIES",
     "entity.mubble.toad": "Toad",
     "entity.mubble.chincho": "Chincho",
-    "//entity.mubble.flying_block": "Flying Block",
+    "entity.mubble.flying_block": "Bloc volant",
 
     "comment": "SUBTITLES",
     "subtitles.block.question_block.mubble.loot.super_mushroom": "Super champignon sorti d'un bloc ?",
     "subtitles.block.question_block.mubble.loot.coin": "Pièce sortie d'un bloc ?",
-    "//subtitles.block.note_block.jump": "<newline>",
-    "//subtitles.item.annoying_dog.disappear": "<newline>",
-    "//subtitles.item.annoying_dog.bark": "<newline>",
+    "subtitles.block.note_block.jump": "Bloc note utilisé",
+    "subtitles.item.annoying_dog.disappear": "Disparition de chien agaçant",
+    "subtitles.item.annoying_dog.bark": "Aboiement de chien agaçant",
     "subtitles.item.cape_feather.use": "Plume acrobate utilisée",
     "subtitles.item.smash_ball.use": "Balle Smash utilisée",
-    "//subtitles.costume.cappy.ambient": "<newline>",
-    "//subtitles.costume.cappy.ambient.nether": "<newline>",
-    "//subtitles.costume.cappy.equip": "<newline>",
-    "//subtitles.costume.cappy.happy": "<newline>",
-    "//subtitles.costume.cappy.help": "<newline>",
+    "subtitles.costume.cappy.ambient": "Marmonnement de Cappy",
+    "subtitles.costume.cappy.ambient.nether": "Marmonnement essouflé de Cappy",
+    "subtitles.costume.cappy.equip": "Cappy équipé",
+    "subtitles.costume.cappy.happy": "Marmonnement heureux de Cappy",
+    "subtitles.costume.cappy.help": "Cappy demande de l'aide",
     "subtitles.entity.toad.ambient": "Marmonnement de Toad",
     "subtitles.entity.toad.hurt": "Toad blessé",
     "subtitles.entity.toad.death": "Toad qui meurt",
@@ -500,7 +499,7 @@
 
     "comment": "COMMANDS",
     "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]",
-    "//commands.motion.success": "<newline>",
+    "commands.motion.success": "Vélocité de %s changé à %s, %s, %s",
 
     "comment": "OTHER",
     "item.mubble.snorlax_hat.secret_status": "Tellement paradoxal... :)",
