Updated part of the brick blocks

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -7,54 +7,54 @@
     "comment": "BLOCKS",
     "block.mubble.vanadium_block": "Vanadium-block",
     "block.mubble.vanadium_ore": "Vanadium-Erz",
-    "//block.mubble.blue_bricks": "Blue Bricks",
-    "//block.mubble.light_blue_bricks": "Light Blue Bricks",
-    "//block.mubble.cyan_bricks": "Cyan Bricks",
-    "//block.mubble.green_bricks": "Green Bricks",
-    "//block.mubble.lime_bricks": "Lime Bricks",
-    "//block.mubble.yellow_bricks": "Yellow Bricks",
-    "//block.mubble.orange_bricks": "Orange Bricks",
-    "//block.mubble.red_bricks": "Red Bricks",
-    "//block.mubble.pink_bricks": "Pink Bricks",
-    "//block.mubble.magenta_bricks": "Magenta Bricks",
-    "//block.mubble.purple_bricks": "Purple Bricks",
-    "//block.mubble.brown_bricks": "Brown Bricks",
-    "//block.mubble.white_bricks": "White Bricks",
-    "//block.mubble.light_gray_bricks": "Light Gray Bricks",
-    "//block.mubble.gray_bricks": "Gray Bricks",
-    "//block.mubble.black_bricks": "Black Bricks",
-    "//block.mubble.blue_brick_stairs": "Blue Brick Stairs",
-    "//block.mubble.light_blue_brick_stairs": "Light Blue Brick Stairs",
-    "//block.mubble.cyan_brick_stairs": "Cyan Brick Stairs",
-    "//block.mubble.green_brick_stairs": "Green Brick Stairs",
-    "//block.mubble.lime_brick_stairs": "Lime Brick Stairs",
-    "//block.mubble.yellow_brick_stairs": "Yellow Brick Stairs",
-    "//block.mubble.orange_brick_stairs": "Orange Brick Stairs",
-    "//block.mubble.red_brick_stairs": "Red Brick Stairs",
-    "//block.mubble.pink_brick_stairs": "Pink Brick Stairs",
-    "//block.mubble.magenta_brick_stairs": "Magenta Brick Stairs",
-    "//block.mubble.purple_brick_stairs": "Purple Brick Stairs",
-    "//block.mubble.brown_brick_stairs": "Brown Brick Stairs",
-    "//block.mubble.white_brick_stairs": "White Brick Stairs",
-    "//block.mubble.light_gray_brick_stairs": "Light Gray Brick Stairs",
-    "//block.mubble.gray_brick_stairs": "Gray Brick Stairs",
-    "//block.mubble.black_brick_stairs": "Black Brick Stairs",
-    "//block.mubble.blue_brick_slab": "Blue Brick Slab",
-    "//block.mubble.light_blue_brick_slab": "Light Blue Brick Slab",
-    "//block.mubble.cyan_brick_slab": "Cyan Brick Slab",
-    "//block.mubble.green_brick_slab": "Green Brick Slab",
-    "//block.mubble.lime_brick_slab": "Lime Brick Slab",
-    "//block.mubble.yellow_brick_slab": "Yellow Brick Slab",
-    "//block.mubble.orange_brick_slab": "Orange Brick Slab",
-    "//block.mubble.red_brick_slab": "Red Brick Slab",
-    "//block.mubble.pink_brick_slab": "Pink Brick Slab",
-    "//block.mubble.magenta_brick_slab": "Magenta Brick Slab",
-    "//block.mubble.purple_brick_slab": "Purple Brick Slab",
-    "//block.mubble.brown_brick_slab": "Brown Brick Slab",
-    "//block.mubble.white_brick_slab": "White Brick Slab",
-    "//block.mubble.light_gray_brick_slab": "Light Gray Brick Slab",
-    "//block.mubble.gray_brick_slab": "Gray Brick Slab",
-    "//block.mubble.black_brick_slab": "Black Brick Slab",
+    "block.mubble.blue_bricks": "Blaue Ziegelsteine",
+    "block.mubble.light_blue_bricks": "Hellblaue Ziegelsteine",
+    "block.mubble.cyan_bricks": "Türkise Ziegelsteine",
+    "block.mubble.green_bricks": "Grüne Ziegelsteine",
+    "block.mubble.lime_bricks": "Hellgrüne Ziegelsteine",
+    "block.mubble.yellow_bricks": "Gelbe Ziegelsteine",
+    "block.mubble.orange_bricks": "Orange Ziegelsteine",
+    "block.mubble.red_bricks": "Rote Ziegelsteine",
+    "block.mubble.pink_bricks": "Rosa Ziegelsteine",
+    "block.mubble.magenta_bricks": "Magenta Ziegelsteine",
+    "block.mubble.purple_bricks": "Violette Ziegelsteine",
+    "block.mubble.brown_bricks": "Braune Ziegelsteine",
+    "block.mubble.white_bricks": "Weiße Ziegelsteine",
+    "block.mubble.light_gray_bricks": "Hellgraue Ziegelsteine",
+    "block.mubble.gray_bricks": "Graue Ziegelsteine",
+    "block.mubble.black_bricks": "Schwarze Ziegelsteine",
+    "block.mubble.blue_brick_stairs": "Blaue Ziegeltreppe",
+    "block.mubble.light_blue_brick_stairs": "Hellblaue Ziegeltreppe",
+    "block.mubble.cyan_brick_stairs": "Türkise Ziegeltreppe",
+    "block.mubble.green_brick_stairs": "Grüne Ziegeltreppe",
+    "block.mubble.lime_brick_stairs": "Hellgrüne Ziegeltreppe",
+    "block.mubble.yellow_brick_stairs": "Gelbe Ziegeltreppe",
+    "block.mubble.orange_brick_stairs": "Orange Ziegeltreppe",
+    "block.mubble.red_brick_stairs": "Rote Ziegeltreppe",
+    "block.mubble.pink_brick_stairs": "Rosa Ziegeltreppe",
+    "block.mubble.magenta_brick_stairs": "Magenta Ziegeltreppe",
+    "block.mubble.purple_brick_stairs": "Violette Ziegeltreppe",
+    "block.mubble.brown_brick_stairs": "Braune Ziegeltreppe",
+    "block.mubble.white_brick_stairs": "Weiße Ziegeltreppe",
+    "block.mubble.light_gray_brick_stairs": "Hellgraue Ziegeltreppe",
+    "block.mubble.gray_brick_stairs": "Graue Ziegeltreppe",
+    "block.mubble.black_brick_stairs": "Schwarze Ziegeltreppe",
+    "block.mubble.blue_brick_slab": "Blaue Ziegelstufe",
+    "block.mubble.light_blue_brick_slab": "Hellblaue Ziegelstufe",
+    "block.mubble.cyan_brick_slab": "Türkise Ziegelstufe",
+    "block.mubble.green_brick_slab": "Grüne Ziegelstufe",
+    "block.mubble.lime_brick_slab": "Hellgrüne Ziegelstufe",
+    "block.mubble.yellow_brick_slab": "Gelbe Ziegelstufe",
+    "block.mubble.orange_brick_slab": "Orange Ziegelstufe",
+    "block.mubble.red_brick_slab": "Rote Ziegelstufe",
+    "block.mubble.pink_brick_slab": "Rosa Zielgelstufe",
+    "block.mubble.magenta_brick_slab": "Magenta Ziegelstufe",
+    "block.mubble.purple_brick_slab": "Violette Ziegelstufe",
+    "block.mubble.brown_brick_slab": "Braune Ziegelstufe",
+    "block.mubble.white_brick_slab": "Weiße Ziegelstufe",
+    "block.mubble.light_gray_brick_slab": "Hellgraue Ziegelstufe",
+    "block.mubble.gray_brick_slab": "Graue Ziegelstufe",
+    "block.mubble.black_brick_slab": "Schwarze Ziegelstufe",
     "//block.mubble.blue_brick_vertical_slab": "Blue Brick Vertical Slab",
     "//block.mubble.light_blue_brick_vertical_slab": "Light Blue Brick Vertical Slab",
     "//block.mubble.cyan_brick_vertical_slab": "Cyan Brick Vertical Slab",
