Update de_de.json to be up to date

--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -312,18 +312,18 @@
     "block.mubble.scarlet_orchid": "Scharlachrote Orchidee",
 
     "block.mubble.girder": "Träger",
-    "//block.mubble.mirror_temple_bricks": "Mirror Temple Bricks",
-    "//block.mubble.mirror_temple_brick_stairs": "Mirror Temple Brick Stairs",
-    "//block.mubble.mirror_temple_brick_slab": "Mirror Temple Brick Slab",
-    "//block.mubble.mirror_temple_brick_vertical_slab": "Mirror Temple Brick Vertical Slab",
-    "//block.mubble.mirror_temple_brick_wall": "Mirror Temple Brick Wall",
-    "//block.mubble.old_site_bricks": "Old Site Brick",
-    "//block.mubble.old_site_brick_stairs": "Old Site Brick Stairs",
-    "//block.mubble.old_site_brick_slab": "Old Site Brick Slab",
-    "//block.mubble.old_site_brick_vertical_slab": "Old Site Brick Vertical Slab",
-    "//block.mubble.old_site_brick_wall": "Old Site Brick Wall",
+    "block.mubble.mirror_temple_bricks": "Spiegel-Tempelziegel",
+    "block.mubble.mirror_temple_brick_stairs": "Spiegel-Tempelziegeltreppe",
+    "block.mubble.mirror_temple_brick_slab": "Spiegel-Tempelziegelstufe",
+    "block.mubble.mirror_temple_brick_vertical_slab": "Senkrechte Spiegel-Tempelziegelstufe",
+    "block.mubble.mirror_temple_brick_wall": "Spiegel-Tempelziegelmauer",
+    "block.mubble.old_site_bricks": "Ziegel aus der alten Anlage",
+    "block.mubble.old_site_brick_stairs": "Ziegeltreppe aus der alten Anlage",
+    "block.mubble.old_site_brick_slab": "Ziegelstufe aus der alten Anlage",
+    "block.mubble.old_site_brick_vertical_slab": "Senkrechte Ziegelstufe aus der alten Anlage",
+    "block.mubble.old_site_brick_wall": "Ziegelmauer aus der alten Anlage",
     "block.mubble.elder_pebbles": "Ältester Kieselstein",
-    "//block.mubble.space_jam": "Space Jam",
+    "block.mubble.space_jam": "Weltraumstau",
     "block.mubble.space_obsidian": "Weltraumobsidian",
 
     "block.mubble.blue_puyo": "Blauer Puyo",
