--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -107,86 +107,86 @@
     "block.mubble.polished_carbonite_stairs": "Gepolijst carbonite trap",
     "block.mubble.polished_carbonite_slab": "Gepolijst carbonite plaat",
     "block.mubble.polished_carbonite_vertical_slab": "Gepolijst carbonite verticale plaat",
-    "//block.mubble.blue_dark_prismarine": "Blue Dark Prismarine",
-    "//block.mubble.light_blue_dark_prismarine": "Light Blue Dark Prismarine",
-    "//block.mubble.cyan_dark_prismarine": "Cyan Dark Prismarine",
-    "//block.mubble.green_dark_prismarine": "Green Dark Prismarine",
-    "//block.mubble.lime_dark_prismarine": "Lime Dark Prismarine",
-    "//block.mubble.yellow_dark_prismarine": "Yellow Dark Prismarine",
-    "//block.mubble.orange_dark_prismarine": "Orange Dark Prismarine",
-    "//block.mubble.red_dark_prismarine": "Red Dark Prismarine",
-    "//block.mubble.pink_dark_prismarine": "Pink Dark Prismarine",
-    "//block.mubble.magenta_dark_prismarine": "Magenta Dark Prismarine",
-    "//block.mubble.purple_dark_prismarine": "Purple Dark Prismarine",
-    "//block.mubble.brown_dark_prismarine": "Brown Dark Prismarine",
-    "//block.mubble.white_dark_prismarine": "White Dark Prismarine",
-    "//block.mubble.light_gray_dark_prismarine": "Light Gray Dark Prismarine",
-    "//block.mubble.gray_dark_prismarine": "Gray Dark Prismarine",
-    "//block.mubble.black_dark_prismarine": "Black Dark Prismarine",
-    "//block.mubble.blue_dark_prismarine_stairs": "Blue Dark Prismarine Stairs",
-    "//block.mubble.light_blue_dark_prismarine_stairs": "Light Blue Dark Prismarine Stairs",
-    "//block.mubble.cyan_dark_prismarine_stairs": "Cyan Dark Prismarine Stairs",
-    "//block.mubble.green_dark_prismarine_stairs": "Green Dark Prismarine Stairs",
-    "//block.mubble.lime_dark_prismarine_stairs": "Lime Dark Prismarine Stairs",
-    "//block.mubble.yellow_dark_prismarine_stairs": "Yellow Dark Prismarine Stairs",
-    "//block.mubble.orange_dark_prismarine_stairs": "Orange Dark Prismarine Stairs",
-    "//block.mubble.red_dark_prismarine_stairs": "Red Dark Prismarine Stairs",
-    "//block.mubble.pink_dark_prismarine_stairs": "Pink Dark Prismarine Stairs",
-    "//block.mubble.magenta_dark_prismarine_stairs": "Magenta Dark Prismarine Stairs",
-    "//block.mubble.purple_dark_prismarine_stairs": "Purple Dark Prismarine Stairs",
-    "//block.mubble.brown_dark_prismarine_stairs": "Brown Dark Prismarine Stairs",
-    "//block.mubble.white_dark_prismarine_stairs": "White Dark Prismarine Stairs",
-    "//block.mubble.light_gray_dark_prismarine_stairs": "Light Gray Dark Prismarine Stairs",
-    "//block.mubble.gray_dark_prismarine_stairs": "Gray Dark Prismarine Stairs",
-    "//block.mubble.black_dark_prismarine_stairs": "Black Dark Prismarine Stairs",
-    "//block.mubble.blue_dark_prismarine_slab": "Blue Dark Prismarine Slab",
-    "//block.mubble.light_blue_dark_prismarine_slab": "Light Blue Dark Prismarine Slab",
-    "//block.mubble.cyan_dark_prismarine_slab": "Cyan Dark Prismarine Slab",
-    "//block.mubble.green_dark_prismarine_slab": "Green Dark Prismarine Slab",
-    "//block.mubble.lime_dark_prismarine_slab": "Lime Dark Prismarine Slab",
-    "//block.mubble.yellow_dark_prismarine_slab": "Yellow Dark Prismarine Slab",
-    "//block.mubble.orange_dark_prismarine_slab": "Orange Dark Prismarine Slab",
-    "//block.mubble.red_dark_prismarine_slab": "Red Dark Prismarine Slab",
-    "//block.mubble.pink_dark_prismarine_slab": "Pink Dark Prismarine Slab",
-    "//block.mubble.magenta_dark_prismarine_slab": "Magenta Dark Prismarine Slab",
-    "//block.mubble.purple_dark_prismarine_slab": "Purple Dark Prismarine Slab",
-    "//block.mubble.brown_dark_prismarine_slab": "Brown Dark Prismarine Slab",
-    "//block.mubble.white_dark_prismarine_slab": "White Dark Prismarine Slab",
-    "//block.mubble.light_gray_dark_prismarine_slab": "Light Gray Dark Prismarine Slab",
-    "//block.mubble.gray_dark_prismarine_slab": "Gray Dark Prismarine Slab",
-    "//block.mubble.black_dark_prismarine_slab": "Black Dark Prismarine Slab",
-    "//block.mubble.blue_dark_prismarine_vertical_slab": "Blue Dark Prismarine Vertical Slab",
-    "//block.mubble.light_blue_dark_prismarine_vertical_slab": "Light Blue Dark Prismarine Vertical Slab",
-    "//block.mubble.cyan_dark_prismarine_vertical_slab": "Cyan Dark Prismarine Vertical Slab",
-    "//block.mubble.green_dark_prismarine_vertical_slab": "Green Dark Prismarine Vertical Slab",
-    "//block.mubble.lime_dark_prismarine_vertical_slab": "Lime Dark Prismarine Vertical Slab",
-    "//block.mubble.yellow_dark_prismarine_vertical_slab": "Yellow Dark Prismarine Vertical Slab",
-    "//block.mubble.orange_dark_prismarine_vertical_slab": "Orange Dark Prismarine Vertical Slab",
-    "//block.mubble.red_dark_prismarine_vertical_slab": "Red Dark Prismarine Vertical Slab",
-    "//block.mubble.pink_dark_prismarine_vertical_slab": "Pink Dark Prismarine Vertical Slab",
-    "//block.mubble.magenta_dark_prismarine_vertical_slab": "Magenta Dark Prismarine Vertical Slab",
-    "//block.mubble.purple_dark_prismarine_vertical_slab": "Purple Dark Prismarine Vertical Slab",
-    "//block.mubble.brown_dark_prismarine_vertical_slab": "Brown Dark Prismarine Vertical Slab",
-    "//block.mubble.white_dark_prismarine_vertical_slab": "White Dark Prismarine Vertical Slab",
-    "//block.mubble.light_gray_dark_prismarine_vertical_slab": "Light Gray Dark Prismarine Vertical Slab",
-    "//block.mubble.gray_dark_prismarine_vertical_slab": "Gray Dark Prismarine Vertical Slab",
-    "//block.mubble.black_dark_prismarine_vertical_slab": "Black Dark Prismarine Vertical Slab",
-    "//block.mubble.blue_dark_prismarine_wall": "Blue Dark Prismarine Wall",
-    "//block.mubble.light_blue_dark_prismarine_wall": "Light Blue Dark Prismarine Wall",
-    "//block.mubble.cyan_dark_prismarine_wall": "Cyan Dark Prismarine Wall",
-    "//block.mubble.green_dark_prismarine_wall": "Green Dark Prismarine Wall",
-    "//block.mubble.lime_dark_prismarine_wall": "Lime Dark Prismarine Wall",
-    "//block.mubble.yellow_dark_prismarine_wall": "Yellow Dark Prismarine Wall",
-    "//block.mubble.orange_dark_prismarine_wall": "Orange Dark Prismarine Wall",
-    "//block.mubble.red_dark_prismarine_wall": "Red Dark Prismarine Wall",
-    "//block.mubble.pink_dark_prismarine_wall": "Pink Dark Prismarine Wall",
-    "//block.mubble.magenta_dark_prismarine_wall": "Magenta Dark Prismarine Wall",
-    "//block.mubble.purple_dark_prismarine_wall": "Purple Dark Prismarine Wall",
-    "//block.mubble.brown_dark_prismarine_wall": "Brown Dark Prismarine Wall",
-    "//block.mubble.white_dark_prismarine_wall": "White Dark Prismarine Wall",
-    "//block.mubble.light_gray_dark_prismarine_wall": "Light Gray Dark Prismarine Wall",
-    "//block.mubble.gray_dark_prismarine_wall": "Gray Dark Prismarine Wall",
-    "//block.mubble.black_dark_prismarine_wall": "Black Dark Prismarine Wall",
+    "block.mubble.blue_dark_prismarine": "Blauwe donkereprismarien",
+    "block.mubble.light_blue_dark_prismarine": "Lichtblauwe donkereprismarien",
+    "block.mubble.cyan_dark_prismarine": "Turquoise donkereprismarien",
+    "block.mubble.green_dark_prismarine": "Groene donkereprismarien",
+    "block.mubble.lime_dark_prismarine": "Lichtgroene donkereprismarien",
+    "block.mubble.yellow_dark_prismarine": "Gele donkereprismarien",
+    "block.mubble.orange_dark_prismarine": "Orange donkereprismarien",
+    "block.mubble.red_dark_prismarine": "Rode donkereprismarien",
+    "block.mubble.pink_dark_prismarine": "Roze donkereprismarien",
+    "block.mubble.magenta_dark_prismarine": "Magenta donkereprismarien",
+    "block.mubble.purple_dark_prismarine": "Paarse donkereprismarien",
+    "block.mubble.brown_dark_prismarine": "Bruine donkereprismarien",
+    "block.mubble.white_dark_prismarine": "Witte donkereprismarien",
+    "block.mubble.light_gray_dark_prismarine": "Lichtgrijze donkereprismarien",
+    "block.mubble.gray_dark_prismarine": "Grijze donkereprismarien",
+    "block.mubble.black_dark_prismarine": "Zwarte donkereprismarien",
+    "block.mubble.blue_dark_prismarine_stairs": "Blauwe donkereprismarientrap",
+    "block.mubble.light_blue_dark_prismarine_stairs": "Lichtblauwe donkereprismarientrap",
+    "block.mubble.cyan_dark_prismarine_stairs": "Turquoise donkereprismarientrap",
+    "block.mubble.green_dark_prismarine_stairs": "Groene donkereprismarientrap",
+    "block.mubble.lime_dark_prismarine_stairs": "Lichtgroene donkereprismarientrap",
+    "block.mubble.yellow_dark_prismarine_stairs": "Gele donkereprismarientrap",
+    "block.mubble.orange_dark_prismarine_stairs": "Orange donkereprismarientrap",
+    "block.mubble.red_dark_prismarine_stairs": "Rode donkereprismarientrap",
+    "block.mubble.pink_dark_prismarine_stairs": "Roze donkereprismarientrap",
+    "block.mubble.magenta_dark_prismarine_stairs": "Magenta donkereprismarientrap",
+    "block.mubble.purple_dark_prismarine_stairs": "Paarse donkereprismarientrap",
+    "block.mubble.brown_dark_prismarine_stairs": "Bruine donkereprismarientrap",
+    "block.mubble.white_dark_prismarine_stairs": "Witte donkereprismarientrap",
+    "block.mubble.light_gray_dark_prismarine_stairs": "Lichtgrijze donkereprismarientrap",
+    "block.mubble.gray_dark_prismarine_stairs": "Grijze donkereprismarientrap",
+    "block.mubble.black_dark_prismarine_stairs": "Zwarte donkereprismarientrap",
+    "block.mubble.blue_dark_prismarine_slab": "Blauwe donkereprismarienplaat",
+    "block.mubble.light_blue_dark_prismarine_slab": "Lichtblauwe donkereprismarienplaat",
+    "block.mubble.cyan_dark_prismarine_slab": "Turquoise donkereprismarienplaat",
+    "block.mubble.green_dark_prismarine_slab": "Groene donkereprismarienplaat",
+    "block.mubble.lime_dark_prismarine_slab": "Lichtgroene donkereprismarienplaat",
+    "block.mubble.yellow_dark_prismarine_slab": "Gele donkereprismarienplaat",
+    "block.mubble.orange_dark_prismarine_slab": "Orange donkereprismarienplaat",
+    "block.mubble.red_dark_prismarine_slab": "Rode donkereprismarienplaat",
+    "block.mubble.pink_dark_prismarine_slab": "Roze donkereprismarienplaat",
+    "block.mubble.magenta_dark_prismarine_slab": "Magenta donkereprismarienplaat",
+    "block.mubble.purple_dark_prismarine_slab": "Paarse donkereprismarienplaat",
+    "block.mubble.brown_dark_prismarine_slab": "Bruine donkereprismarienplaat",
+    "block.mubble.white_dark_prismarine_slab": "Witte donkereprismarienplaat",
+    "block.mubble.light_gray_dark_prismarine_slab": "Lichtgrijze donkereprismarienplaat",
+    "block.mubble.gray_dark_prismarine_slab": "Grijze donkereprismarienplaat",
+    "block.mubble.black_dark_prismarine_slab": "Zwarte donkereprismarienplaat",
+    "block.mubble.blue_dark_prismarine_vertical_slab": "Blauwe donkereprismarien verticale plaat",
+    "block.mubble.light_blue_dark_prismarine_vertical_slab": "Lichtblauwe donkereprismarien verticale plaat",
+    "block.mubble.cyan_dark_prismarine_vertical_slab": "Turquoise donkereprismarien verticale plaat",
+    "block.mubble.green_dark_prismarine_vertical_slab": "Groene donkereprismarien verticale plaat",
+    "block.mubble.lime_dark_prismarine_vertical_slab": "Lichtgroene donkereprismarien verticale plaat",
+    "block.mubble.yellow_dark_prismarine_vertical_slab": "Gele donkereprismarien verticale plaat",
+    "block.mubble.orange_dark_prismarine_vertical_slab": "Orange donkereprismarien verticale plaat",
+    "block.mubble.red_dark_prismarine_vertical_slab": "Rose donkereprismarien verticale plaat",
+    "block.mubble.pink_dark_prismarine_vertical_slab": "Roze donkereprismarien verticale plaat",
+    "block.mubble.magenta_dark_prismarine_vertical_slab": "Magenta donkereprismarien verticale plaat",
+    "block.mubble.purple_dark_prismarine_vertical_slab": "Paarse donkereprismarien verticale plaat",
+    "block.mubble.brown_dark_prismarine_vertical_slab": "Bruine donkereprismarien verticale plaat",
+    "block.mubble.white_dark_prismarine_vertical_slab": "Witte donkereprismarien verticale plaat",
+    "block.mubble.light_gray_dark_prismarine_vertical_slab": "Lichtgrijze donkereprismarien verticale plaat",
+    "block.mubble.gray_dark_prismarine_vertical_slab": "Grijze donkereprismarien verticale plaat",
+    "block.mubble.black_dark_prismarine_vertical_slab": "Zwarte donkereprismarien verticale plaat",
+    "block.mubble.blue_dark_prismarine_wall": "Blauwe donkereprismarienmuur",
+    "block.mubble.light_blue_dark_prismarine_wall": "Lichtblauwe donkereprismarienmuur",
+    "block.mubble.cyan_dark_prismarine_wall": "Turquoise donkereprismarienmuur",
+    "block.mubble.green_dark_prismarine_wall": "Groene donkereprismarienmuur",
+    "block.mubble.lime_dark_prismarine_wall": "Lichtgroene donkereprismarienmuur",
+    "block.mubble.yellow_dark_prismarine_wall": "Gele donkereprismarienmuur",
+    "block.mubble.orange_dark_prismarine_wall": "Orange donkereprismarienmuur",
+    "block.mubble.red_dark_prismarine_wall": "Rode donkereprismarienmuur",
+    "block.mubble.pink_dark_prismarine_wall": "Roze donkereprismarienmuur",
+    "block.mubble.magenta_dark_prismarine_wall": "Magenta donkereprismarienmuur",
+    "block.mubble.purple_dark_prismarine_wall": "Paarse donkereprismarienmuur",
+    "block.mubble.brown_dark_prismarine_wall": "Bruine donkereprismarienmuur",
+    "block.mubble.white_dark_prismarine_wall": "Witte donkereprismarienmuur",
+    "block.mubble.light_gray_dark_prismarine_wall": "Lichtgrijze donkereprismarienmuur",
+    "block.mubble.gray_dark_prismarine_wall": "Grijze donkereprismarienmuur",
+    "block.mubble.black_dark_prismarine_wall": "Zwarte donkereprismarienmuur",
     "block.mubble.footblock": "Voetblok",
     "block.mubble.white_cloud_block": "Wittewolkblok",
     "block.mubble.light_gray_cloud_block": "Lichtgrijzewolkblok",
@@ -424,8 +424,8 @@
     "item.mubble.remix_disc_nb_sweden.desc": "C418 - Sweden (NoteBlock Remix)",
     "item.mubble.remix_disc_nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (NoteBlock Remix)",
 
-    "//item.mubble.toad_spawn_egg":"Toad Spawn Egg",
-    "//item.mubble.chincho_spawn_egg":"Chincho Spawn Egg",
+    "item.mubble.toad_spawn_egg":"Toadspawnei",
+    "item.mubble.chincho_spawn_egg":"Chinchospawnei",
 
     "comment": "COSTUMES",
     "item.mubble.headphones": "Koptelefoon",
@@ -462,7 +462,7 @@
     "comment": "ENTITIES",
     "entity.mubble.toad": "Toad",
     "entity.mubble.chincho": "Chincho",
-    "//entity.mubble.flying_block": "Flying Block",
+    "entity.mubble.flying_block": "Vliegend blok",
 
     "comment": "SUBTITLES",
     "subtitles.block.question_block.mubble.loot.super_mushroom": "?-blok plundert super paddenstoel",
